// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ATOMIZE SHEET NATIVE, DEVELOPMENt 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "color: blue /*sheet.label[0]*/",
        ],
      },
    ],
    "name": "label",
    "~": "c",
  },
  "nativeOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "margin: 20 /*sheet.nativeOnly/$native*/",
        ],
      },
    ],
    "name": "nativeOnly",
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "margin: 4 /*sheet.root*/",
          "padding: 4 /*sheet.root*/",
        ],
      },
      Object {
        "atomicArray": Array [
          "padding: 10 /*sheet.root/$native*/",
        ],
      },
    ],
    "name": "root",
    "~": "c",
  },
}
`;

exports[`ATOMIZE SHEET NATIVE, PRODUCTION 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          Object {
            "propId": "color",
            "value": "blue",
          },
        ],
      },
    ],
    "name": "label",
    "~": "c",
  },
  "nativeOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          Object {
            "propId": "margin",
            "value": 20,
          },
        ],
      },
    ],
    "name": "nativeOnly",
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          Object {
            "propId": "margin",
            "value": 4,
          },
          Object {
            "propId": "padding",
            "value": 4,
          },
        ],
      },
      Object {
        "atomicArray": Array [
          Object {
            "propId": "padding",
            "value": 10,
          },
        ],
      },
    ],
    "name": "root",
    "~": "c",
  },
}
`;

exports[`ATOMIZE SHEET WEB DEVELOPMENT 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".d { color:blue /*sheet.label[0]*/ }",
        ],
      },
    ],
    "name": "label",
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".a { margin:4px /*sheet.root*/ }",
          ".b { padding:4px /*sheet.root*/ }",
        ],
      },
      Object {
        "atomicArray": Array [
          ".c { margin:10px /*sheet.root/$web*/ }",
        ],
      },
    ],
    "name": "root",
    "~": "c",
  },
  "webOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          ".e { color:red /*sheet.webOnly/$web*/ }",
        ],
      },
    ],
    "name": "webOnly",
    "~": "c",
  },
}
`;

exports[`ATOMIZE SHEET WEB PRODUCTION 1`] = `
Object {
  "label": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "d",
        ],
      },
    ],
    "name": "label",
    "~": "c",
  },
  "root": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "a",
          "b",
        ],
      },
      Object {
        "atomicArray": Array [
          "c",
        ],
      },
    ],
    "name": "root",
    "~": "c",
  },
  "webOnly": Object {
    "list": Array [
      Object {
        "atomicArray": Array [
          "e",
        ],
      },
    ],
    "name": "webOnly",
    "~": "c",
  },
}
`;
